# ContractApp

./: .gitignore  CMakeLists.txt  README.md
contractapp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PersonDialog.cpp  PersonDialog.h  PersonDialog.ui  PersonWidget.cpp  PersonWidget.h  PersonWidget.ui
contractapp-core/: CMakeLists.txt  Person.cpp  Person.h  PersonDao.cpp  PersonDao.h  PersonModel.cpp  PersonModel.h  contractapp-core_global.h
contractapp-core/Class/: Pattern.cpp  Pattern.h  Person.cpp  Person.h
contractapp-core/Database/: DatabaseManager.cpp  DatabaseManager.h
contractapp-core/DatabaseClass/: PatternDao.cpp  PatternDao.h  PersonDao.cpp  PersonDao.h
contractapp-core/Model/: PatternModel.cpp  PatternModel.h  PersonModel.cpp  PersonModel.h
contractapp/Dialog/: PersonDialog.cpp  PersonDialog.h  PersonDialog.ui
contractapp/Widget/: ContractWidget.cpp  ContractWidget.h  ContractWidget.ui  PatternWidget.cpp  PatternWidget.h  PatternWidget.ui  PersonDatabaseWidget.cpp  PersonDatabaseWidget.h  PersonDatabaseWidget.ui  PersonWidget.cpp  PersonWidget.h  PersonWidget.ui
